--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.wang.avi:library:2.1.3'
+
     testCompile 'junit:junit:4.12'
 }
 
