--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,15 @@ dependencies {
 
 
     compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.google.android.gms:play-services:10.2.1'
+    compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.wang.avi:library:2.1.3'
 
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
 
 
